--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
@@ -273,7 +273,7 @@
                   <Font name="Dialog" size="12" style="0"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
-                  <Image iconType="2" name="/usr/local/share/devel/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/images/transparent.png"/>
+                  <Image iconType="3" name="/com/davidecavestro/rbe/gui/images/transparent.png"/>
                 </Property>
               </Properties>
               <Events>
@@ -289,7 +289,7 @@
                   <Font name="Dialog" size="12" style="0"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
-                  <Image iconType="2" name="/usr/local/share/devel/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/images/transparent.png"/>
+                  <Image iconType="3" name="/com/davidecavestro/rbe/gui/images/transparent.png"/>
                 </Property>
               </Properties>
             </MenuItem>
@@ -396,6 +396,12 @@
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Dialog" size="12" style="0"/>
+                </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                  <Image iconType="3" name="/com/davidecavestro/rbe/gui/images/transparent.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                  <ResourceString bundle="com/davidecavestro/rbe/gui/res.properties" key="Find" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameDots}&quot;).getString(&quot;{key}&quot;)"/>
                 </Property>
               </Properties>
               <AuxValues>
@@ -603,15 +609,6 @@
           <SubComponents>
             <Container class="javax.swing.JPanel" name="bundleTreePanel">
               <Properties>
-                <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="null"/>
-                </Property>
-                <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="null"/>
-                </Property>
-                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="null"/>
-                </Property>
                 <Property name="autoscrolls" type="boolean" value="true"/>
               </Properties>
               <Constraints>
@@ -630,9 +627,6 @@
                     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="null"/>
                     </Property>
-                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="null"/>
-                    </Property>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
@@ -647,9 +641,6 @@
                         <Property name="cellRenderer" type="javax.swing.tree.TreeCellRenderer" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                           <Connection code="&#x9;new DefaultTreeCellRenderer () {&#xa;&#x9;   public Component getTreeCellRendererComponent(JTree tree, Object value,&#xa;&#x9;&#x9;  boolean sel,&#xa;&#x9;&#x9;  boolean expanded,&#xa;&#x9;&#x9;  boolean leaf, int row,&#xa;&#x9;&#x9;  boolean hasFocus) {&#xa;&#x9;&#x9;&#x9;final JLabel label = (JLabel)super.getTreeCellRendererComponent (tree, value, sel, expanded, leaf, row, hasFocus);&#xa;&#x9;&#x9;&#x9;if (value == LocalizationProperties.DEFAULT) {&#xa;&#x9;&#x9;&#x9;&#x9;label.setText (&quot;Default&quot;);&#xa;&#x9;&#x9;&#x9;}&#xa;&#x9;&#x9;&#x9;return label;&#xa;&#x9;&#x9;}&#xa;&#x9;}&#xa;" type="code"/>
                         </Property>
-                        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                          <Dimension value="null"/>
-                        </Property>
                         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="null"/>
                         </Property>
@@ -657,9 +648,6 @@
                           <Connection code="new LocalizationTreeModel (this._wm.getApplicationContext ().getModel ())" type="code"/>
                         </Property>
                         <Property name="name" type="java.lang.String" value="bundleTree"/>
-                        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                          <Dimension value="null"/>
-                        </Property>
                         <Property name="showsRootHandles" type="boolean" value="true"/>
                         <Property name="autoscrolls" type="boolean" value="true"/>
                       </Properties>
